<resources>
    <string name="app_name">NGRFitness</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="haslo">Hasło</string>
    <string name="kliknij_tutaj_aby_sie_zalogowac">Kliknij tutaj aby się zalogować</string>
    <string name="kliknij_tutaj_aby_sie_zarejestrowac">Kliknij tutaj aby się zarejestrować</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="nickname">Nickname</string>
    <string name="powrot">Powrót</string>
    <string name="liczba_krokow">Liczba kroków:</string>
    <string name="email2">Email:</string>
    <string name="profil">Profil</string>
    <string name="nick">Nick</string>
    <string name="kroki">Kroki</string>
    <string name="element">element:</string>
    <string name="maks_liczba_krokow">Maks. liczba kroków:</string>
    <string name="my_ip_key">AIzaSyBltdy2Kuf3aZaHBe_2xz-J1rzkTOWIguY</string>
    <string name="mapa">Mapa</string>
    <string name="szukaj">Szukaj</string>
    <string name="pokaz_trase">Pokaż trasę</string>
    <string name="wezwij_pomoc">Wezwij pomoc</string>
    <string name="informacje">Informacje</string>
    <string name="galeria">Galeria</string>
    <string name="zrobzdj">Zrób Zdjęcie</string>
    ///////////////////////////////////////////////
    <string name="nie_dziala">Nie Działa</string>
    <string name="pomoc">Pomyślnie wysłano prośbę o pomoc</string>
    <string name="blad">Błąd</string>
    <string name="brak_lokalizcji">Brak lokalizacji emulatora</string>
    <string name="brak_dost_lokalizcji">Brak dostępu do lokalizacji emulatora</string>
    <string name="brak_pozwolenia">Brak pozwolenia</string>
    <string name="wpisz_mail">Wpisz E-mail</string>
    <string name="wpisz_haslo">Wpisz Hasło</string>
    <string name="logowanie_zakon">Logowanie zakończone</string>
    <string name="logowanie_nieudane">Logowanie nieudane</string>
    <string name="przycisk_sledzenia">Przycisk śledzenia</string>
    <string name="przypominacz">Kanał dla przypomnień NGRFitness</string>
    <string name="zrobiono_zdj">Zrobiono zdjęcie</string>
    <string name="nie_zrobiono_zdj">Nie zrobiono zdjęcie</string>
    <string name="rejestr_sukces">Rejestracja zakończona sukcesem</string>
    <string name="rejestr_sukces_blad">Rejestracja zakończona, ale aktualizacja profilu nie powiodła się</string>
    <string name="rejestr_blad">Rejestracja nie powiodła się</string>
    <string name="zapisano_kroki">Zapisano kroki</string>
    <string name="dziasiec_krokow">Musisz przejść 10 kroków!</string>
    <string name="chodz">NGR Fitness: Chódź!</string>
    <string name="nie_obsl">Urządzenie nie obsługiwane</string>
    <string name="pauza">Pauza</string>
    <string name="dziesiec_udalo">Przeszedłeś 10 kroków!</string>
    <string name="gratulacje">NGR Fitness: Gratulacje!</string>

</resources>